--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ header {
     top: 0;
     left: 0;
     background-color: #000706;
+    font-family: 'Kagitigan',sans-serif;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -114,8 +115,8 @@ header a{
     justify-content: center;
     background-color: #f4f6fc;
     font-size: 1vw;
-    width: 100px;
-    height: 100px;
+    width: 90px;
+    height: 90px;
     border-radius: 50%;
     flex-direction: column;
 }
@@ -151,6 +152,54 @@ header a{
     margin: 20px;
     font-size: 1vw;
 }
+.post{
+    background-color: #00132d;
+    color: white;
+    border-radius: 5px;
+    padding: 5px;
+    margin: 10px;
+    font-size: 1rem;
+    height: auto;
+    border:2px solid #000706
+}
+.post-header{
+    display: flex;
+    justify-content: right;
+    align-items: center;
+}
+.post-content{
+    text-align: left;
+    margin:7px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+.delete-post{
+    background-color: red;
+    color: white;
+    max-height: 30px;
+    max-width: 30px;
+    border: 2px dotted #00132d;
+    border-radius: 5px;
+    padding: 5px;
+    font-size: 1rem;
+    cursor: pointer;
+}
+.post-title{
+    text-overflow: unset;
+    white-space: wrap;
+    word-break:break-all;
+}
+textarea{
+    resize: none;
+    width: 100%;
+    height: 100px;
+    padding: 10px;
+    font-size: 1rem;
+    border-radius: 5px;
+    border: 2px solid #00132d;
+}
 
 .botão {
     margin: 50px;
@@ -179,7 +228,7 @@ header a{
 }
 
 .content-container {
-    margin: 10vw 3vh;
+    margin: 2vh 3vw;
     display: flex;
     height: auto;
     flex-direction: column;
@@ -225,7 +274,8 @@ header a{
     width: 0;
     height: 0;
     cursor: pointer;
-    margin-right: 70px;
+    margin-right: 50px;
+    margin-left: 20px;
     filter: grayscale(100%);
     transition: color 0.7s, filter 0.7s;
 }
